--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "jest --watch"
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
@@ -12,6 +13,11 @@
     "morgan": "~1.9.0",
     "pg": "^7.10.0",
     "sequelize": "^5.6.1",
-    "sequelize-cli": "^5.4.0"
+    "sequelize-cli": "^5.4.0",
+    "shelljs": "^0.8.3"
+  },
+  "devDependencies": {
+    "babel-jest": "^24.7.1",
+    "supertest": "^4.0.2"
   }
 }
