--- a/config/config.json
+++ b/config/config.json
@@ -1,20 +1,20 @@
 {
   "development": {
-    "username": "dee",
+    "username": "YOUR_POSTGRES_USER_NAME",
     "password": null,
     "database": "arcade2_development",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
-    "username": "dee",
+    "username": "YOUR_POSTGRES_USER_NAME",
     "password": null,
     "database": "arcade2_test",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
-    "username": "dee",
+    "username": "YOUR_POSTGRES_USER_NAME",
     "password": null,
     "database": "arcade2_production",
     "host": "127.0.0.1",
